--- a/src/TheWorld/Views/App/Contact.cshtml
+++ b/src/TheWorld/Views/App/Contact.cshtml
@@ -13,21 +13,31 @@
     <div class="col-md-6 col-md-offset-3">
         <h1>Contact</h1>
         <form method="post">
-            <span asp-validation-summary="ModelOnly"></span>
-            <label asp-for="Name"></label>
-            <input asp-for="Name" />
-            <span asp-validation-for="Name"></span>
+            <div class="form-group">
+                <span asp-validation-summary="ModelOnly"></span>
+                <label asp-for="Name"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-muted"></span>
+            </div>
 
-            <label asp-for="Email"></label>
-            <input asp-for="Email" type="email" />
-            <span asp-validation-for="Email"></span>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" type="email" class="form-control" />
+                <span asp-validation-for="Email" class="text-muted"></span>
+            </div>
 
-            <label asp-for="Message"></label>
-            <textarea asp-for="Message" cols="40" rows="4"></textarea>
-            <span asp-validation-for="Message"></span>
+            <div class="form-group">
+                <label asp-for="Message"></label>
+                <textarea asp-for="Message" cols="40" rows="4" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-muted"></span>
+            </div>
 
-            <div>
-                <input type="submit" value="Send Message" />
+            <div class="form-group">
+                <a asp-controller="App" asp-action="Index" class="btn btn-default">
+                    <i class="fa fa-close"></i>
+                    Cancel
+                </a>
+                <input type="submit" value="Send Message" class="btn btn-success" />                    
             </div>
         </form>
     </div>    
