--- a/src/TheWorld/Views/App/Index.cshtml
+++ b/src/TheWorld/Views/App/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@Model IEnumerable<TheWorld.Models.Trip>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -23,5 +24,11 @@
 
     <div class="col-md-6">
         <h2>The Map</h2>
+        <ul>
+            @foreach (var item in Model)
+            {
+                <li>@item.Name : @item.DateCreated.ToString("d");</li>
+            }
+        </ul>
     </div>
 </div>
