Added authorization to trips and stops controller. Added angular to trips view.

--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -2,11 +2,13 @@
 @{
     ViewBag.Title = "Home Page";
 }
-
+@section Scripts {
+    <script src="~/lib/angular/angular.min.js"></script>
+}
 <div class="row">
     <div class="col-md-6">
         <h1>The World</h1>
-        <p>This will be a fun website soon!</p>
+        <p>This will be a fun website soon! Cambio</p>
         <form>
             <div class="form-group">
                 <label>Date</label>
