--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -4,8 +4,15 @@
 }
 @section Scripts {
     <script src="~/lib/angular/angular.min.js"></script>
+    <script src="~/js/app-trips.js"></script>
+    <script src="~/js/tripsController.js"></script>
 }
-<div class="row">
+<div class="row" ng-app="app-trips">
+
+    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
+        {{ vm.name }}
+    </div>
+
     <div class="col-md-6">
         <h1>The World</h1>
         <p>This will be a fun website soon! Cambio</p>
@@ -19,7 +26,7 @@
                 <input class="form-control" />
             </div>
             <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
+                <input type="submit" value="Add" class="btn btn-success" />
             </div>
         </form>
     </div>
