Added a table and a form to add new trips using angular. (This is provisional)

--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -4,13 +4,30 @@
 }
 @section Scripts {
     <script src="~/lib/angular/angular.min.js"></script>
-    <script src="~/js/app-trips.js"></script>
-    <script src="~/js/tripsController.js"></script>
+    <script src="~/js/controllers/app-trips.js"></script>
+    <script src="~/js/controllers/tripsController.js"></script>
 }
 <div class="row" ng-app="app-trips">
 
     <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
-        {{ vm.name }}
+        <table class="table table-responsive table-striped">
+            <tr ng-repeat="trip in vm.trips">
+                <td class="col-sm-1"><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
+                <td class="col-sm-2">{{trip .created | date : 'dd-MM-yyyy'}}</td>
+                <td class="col-md-5">{{trip.name}}</td>
+            </tr>
+        </table>
+
+        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
+            <div class="form-group">
+                <label for="name">Trip Name</label>
+                <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Add" class="btn btn-success btn-sm" />
+            </div>
+        </form>
+
     </div>
 
     <div class="col-md-6">
