--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -10,6 +10,11 @@
 <div class="row" ng-app="app-trips">
 
     <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
+        <div class="text-danger" ng-show="vm.errorMessage">{{vm.errorMessage}}</div>
+        <div ng-show="vm.isBusy" class="text-center">
+            <i class="fa fa-spinner fa-spin"></i>
+            Loading ...
+        </div>
         <table class="table table-responsive table-striped">
             <tr ng-repeat="trip in vm.trips">
                 <td class="col-sm-1"><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
@@ -21,10 +26,15 @@
         <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
             <div class="form-group">
                 <label for="name">Trip Name</label>
-                <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name" />
+                <input class="form-control" type="text" id="name" name="name" 
+                       ng-model="vm.newTrip.name" required ng-minlength="5"/>
+                <span ng-show="newTripForm.name.$error.required" class="text-warning">Valor obligatorio.</span>
+                <span ng-show="newTripForm.name.$error.minlength" class="text-warning">Longitud minima de 5 caracteres.</span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-success btn-sm" />
+                <input type="submit" value="Add" 
+                       class="btn btn-success btn-sm" 
+                       ng-disabled="newTripForm.$invalid"/>
             </div>
         </form>
 
