--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -1,68 +1,16 @@
-﻿@model IEnumerable<TheWorld.Models.Trip>
-@{
+﻿@{
     ViewBag.Title = "Home Page";
 }
 @section Scripts {
     <script src="~/lib/angular/angular.min.js"></script>
+    <script src="~/lib/angular-route/angular-route.min.js"></script>
     <script src="~/js/controllers/simpleControls.js"></script>
     <script src="~/js/controllers/app-trips.js"></script>
-    <script src="~/js/controllers/tripsController.js"></script>    
+    <script src="~/js/controllers/tripsController.js"></script>        
+    <script src="~/js/controllers/tripEditorController.js"></script>
 }
 <div class="row" ng-app="app-trips">
 
-    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
-        <div class="text-danger" ng-show="vm.errorMessage">{{vm.errorMessage}}</div>
-        <wait-cursor display-when="vm.isBusy"></wait-cursor>
-        <table class="table table-responsive table-striped">
-            <tr ng-repeat="trip in vm.trips">
-                <td class="col-sm-1"><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
-                <td class="col-sm-2">{{trip .created | date : 'dd-MM-yyyy'}}</td>
-                <td class="col-md-5">{{trip.name}}</td>
-            </tr>
-        </table>
-
-        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
-            <div class="form-group">
-                <label for="name">Trip Name</label>
-                <input class="form-control" type="text" id="name" name="name" 
-                       ng-model="vm.newTrip.name" required ng-minlength="5"/>
-                <span ng-show="newTripForm.name.$error.required" class="text-warning">Valor obligatorio.</span>
-                <span ng-show="newTripForm.name.$error.minlength" class="text-warning">Longitud minima de 5 caracteres.</span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Add" 
-                       class="btn btn-success btn-sm" 
-                       ng-disabled="newTripForm.$invalid"/>
-            </div>
-        </form>
-
-    </div>
-
-    <div class="col-md-6">
-        <h1>The World</h1>
-        <p>This will be a fun website soon! Cambio</p>
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control" />
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control" />
-            </div>
-            <div>
-                <input type="submit" value="Add" class="btn btn-success" />
-            </div>
-        </form>
-    </div>
-
-    <div class="col-md-6">
-        <h2>The Map</h2>
-        <ul>
-            @foreach (var item in Model)
-            {
-                <li>@item.Name : @item.DateCreated.ToString("d");</li>
-            }
-        </ul>
-    </div>
+    <div ng-view></div>
+    
 </div>
