--- a/src/TheWorld/wwwroot/views/tripEditorView.html
+++ b/src/TheWorld/wwwroot/views/tripEditorView.html
@@ -10,30 +10,42 @@
         <wait-cursor display-when="vm.isBusy"></wait-cursor>
         <div class="alert alert-danger" ng-show="vm.errorMessage">{{vm.errorMessage}}</div>
 
+        <form novalidate name="newStopForm" ng-submit="vm.addStop()">
+            <div class="form-group">
+                <label>Date</label>
+                <input class="form-control" id="arrival" name="arrival" 
+                       ng-model="vm.newStop.arrival" 
+                       required 
+                       ng-pattern="/^(\d{2})\/(\d{2})\/(\d{4})$/" />
+                <span class="text-danger" ng-show="newStopForm.arrival.$error.required">Required</span>
+                <span class="text-danger" ng-show="newStopForm.arrival.$error.pattern">Must have dd/mm/yyyy format</span>
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input class="form-control" id="name" name="name" 
+                       ng-model="vm.newStop.name" 
+                       required 
+                       ng-minlength="5"/>
+                <span class="text-danger" ng-show="newStopForm.name.$error.required">Required</span>
+                <span class="text-danger" ng-show="newStopForm.name.$error.minlength">Minimum length 5</span>
+            </div>
+            <div>
+                <input type="submit" value="Add" class="btn btn-success" ng-disabled="newStopForm.$invalid" />
+            </div>
+        </form>
+
         <table class="table table-responsive table-striped">
             <tr>
                 <th>Location</th>
                 <th>Arrival</th>
             </tr>
-            <tr ng-repeat="stop in vm.stops">                            
+            <tr ng-repeat="stop in vm.stops">
                 <td class="col-md-6">{{stop.name}}</td>
                 <td class="col-sm-3">{{stop.arrival | date : 'dd-MM-yyyy'}}</td>                
             </tr>
         </table>
 
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control" />
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control" />
-            </div>
-            <div>
-                <input type="submit" value="Add" class="btn btn-success" />
-            </div>
-        </form>
+        
     </div>
 
     <div class="col-md-8">
